--- a/html/desafios-html/d012/estilo/style.css
+++ b/html/desafios-html/d012/estilo/style.css
@@ -1,11 +1,18 @@
 @charset "UTF-8";
 
+:root {
+    --font01: Verdana, Geneva, Tahoma, sans-serif;
+    --font02: 'Passion One', cursiva;
+    --font03: 'Sriracha', cursiva;
+}
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 html, body {
+    font-family: var(--font01);
     min-height: 100vh;
     background-color: #a9a9a9;
 }
@@ -19,6 +26,8 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font02);
+    font-size: 10vw;
 }
 
 header p {
@@ -40,6 +49,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font03);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -53,7 +64,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
