--- a/html/desafios-html/d012/estilo/style.css
+++ b/html/desafios-html/d012/estilo/style.css
@@ -53,6 +53,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+	padding-bottom: 2em;
+}
+
 section.normal {
     background-color: #ffffff;
     color: #000000;
@@ -61,12 +65,26 @@ section.normal {
 section.imagem {
     background-color: #333333;
     color: #ffffff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.479);
+    text-shadow: 1px 1px 0px #000000;
+}
+
+section#img01 {
+	background-image: url('../Imagens/ladybug.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+	background-image: url('../Imagens/paper.jpg');
+    background-position: right center;
 }
 
 footer {
