--- a/html/desafios-html/d012/estilo/style.css
+++ b/html/desafios-html/d012/estilo/style.css
@@ -50,7 +50,7 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font03);
-    font-size: 3.5vw;
+    font-size: 3.5vw
 }
 
 section > p {
