--- a/html/exercicios-html/ex026/mq004/estilos/media_query.css
+++ b/html/exercicios-html/ex026/mq004/estilos/media_query.css
@@ -1,4 +1,79 @@
 @charset "UTF-8";
 
-/* TODAS AS DEMAIS MEDIA QUERY */
+/* TODAS AS DEMAIS MEDIA QUERY 
 
+Typical Device Breakpoints
+---------------------------
+Pequenas Telas: até 600px
+Celular: de 600px até 768px
+Tablet: de 780px até 992px
+Desktop: de 992px até 1200px
+Tv: acima de 1200px
+
+*/
+
+@media print {
+	* {
+		font-family: 'Courier New', Courier, monospace;
+	}
+
+	body {
+		background-image: url(../imagens/back-print.jpg); /* Desnecessário */
+	}
+
+	main {
+		width: 90%;
+		border: 2px solid rgb(0, 0, 0);
+	}
+
+	main::after {
+		content: 'Essa impressão foi configurada com responsividade';
+		text-decoration: overline;
+	}
+
+	main h1 {
+		text-shadow: none;
+		color: rgb(0, 0, 0);
+	}
+
+	img#phone { display: none; }
+	img#tablet { display: none; }
+	img#print { display: block; }
+	img#pc { display: none; }
+	img#tv { display: none; }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	body {
+		background-image: url(../imagens/back-tablet.jpg);
+	}
+	img#phone { display: none; }
+	img#tablet { display: block; }
+	img#print { display: none; }
+	img#pc { display: none; }
+	img#tv { display: none; }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	body {
+		background-image: url(../imagens/back-pc.jpg);
+	}
+
+	img#phone { display: none; }
+	img#tablet { display: none; }
+	img#print { display: none; }
+	img#pc { display: block; }
+	img#tv { display: none; }
+}
+
+@media screen and (min-width: 1200px) {
+	body {
+		background-image: url(../imagens/back-tv.jpg);
+	}
+
+	img#phone { display: none; }
+	img#tablet { display: none; }
+	img#print { display: none; }
+	img#pc { display: none; }
+	img#tv { display: block; }
+}
