--- a/html/exercicios-html/ex026/mq005/estilos/style.css
+++ b/html/exercicios-html/ex026/mq005/estilos/style.css
@@ -1,5 +1,76 @@
 @charset "UTF-8";
 
+* {
+	margin: 0px;
+	padding: 0px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 html, body {
-	background-color: lightgray;
+	background-color: rgb(226, 225, 225);
+}
+
+header {
+	background-color: gray;
+}
+
+header > h1 {
+	padding: 10px;
+	text-align: center;
+}
+
+span#burguer {
+	background-color: rgb(58, 57, 57);
+	color: white;
+	display: block;
+	text-align: center;
+	padding: 10px;
+	cursor: pointer;
+}
+
+span#burguer:hover {
+	background-color: rgb(155, 152, 152);
+	color: black;
+}
+
+menu {
+	display: none;
+}
+
+menu > ul {
+	list-style: none;
+}
+
+a {
+	display: block;
+	padding: 10px;
+	text-decoration: none;
+	text-align: center;
+	background-color: rgb(65, 64, 64);
+	color: white;
+	border-top: 2px solid gray;
+}
+
+a:hover {
+	background-color: rgb(155, 152, 152);
+}
+
+main {
+	width: 80%;
+	background-color: white;
+	padding: 10px;
+	margin: auto;
+	margin-top: 15px;
+	border-radius: 10px;
+}
+
+article > h2 {
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+article > p {
+	text-align: justify;
+	margin-bottom: 15px;
+	text-indent: 20px;
 }
